syntax = "proto3";

option csharp_namespace = "GrpcClient";


service Todo{
    rpc GetTodoByName (GetTodoName) returns (stream TodoReturn);
    rpc CreateTodo(TodoReturn) returns(returnBool);
    rpc DeleteTodo(GetTodoName) returns(returnBool);
}


message GetTodoName {
 string name=1;
}

message TodoReturn {
 string title =1;
 string content =2;
 string category=3;
}

message returnBool {
 bool bool = 1;
}


